--- a/src/components/navbar/navBar.scss
+++ b/src/components/navbar/navBar.scss
@@ -6,6 +6,10 @@
   height: 50px;
   border-bottom: 1px solid lightgrey;
 
+  background-color: white;
+  position: sticky;
+  top: 0;
+
   .left {
     display: flex;
     align-items: center;
