add dark/light themes

--- a/src/components/leftBar/leftBar.scss
+++ b/src/components/leftBar/leftBar.scss
@@ -1,63 +1,75 @@
+@import "../../style.scss";
+
 .leftBar {
-  //  задали ширу через FLEX
-  flex: 2;
-  //  ств фіксованого лівого меню
-  position: sticky;
-  //  враховуємо висоту набару яка 70
-  top: 70px;
-  //  задати висоту лівго мені і відняти висоту навбару
-  height: calc(100vh - 70px);
-  //  якщо елементи не вміщаються їх можна прокрутити
-  overflow: scroll;
+  @include themify($themes) {
+    color: themed('textColor');
+    background-color: themed('bg');
 
-  &::-webkit-scrollbar {
-    display: none;
-  }
-  & {
-    scrollbar-width: none;
-  }
-  .container {
-    padding: 20px;
+    //  задали ширу через FLEX
+    flex: 2;
+    //  ств фіксованого лівого меню
+    position: sticky;
+    //  враховуємо висоту набару яка 70
+    top: 70px;
+    //  задати висоту лівго мені і відняти висоту навбару
+    height: calc(100vh - 70px);
+    //  якщо елементи не вміщаються їх можна прокрутити
+    overflow: scroll;
 
-    hr {
-      margin: 20px 0px;
-      border: none;
-      height: 0.5px;
-      background-color: lightgray;
+    &::-webkit-scrollbar {
+      display: none;
     }
-    .menu {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
+    & {
+      scrollbar-width: none;
+    }
+    .container {
+      padding: 20px;
 
-      span {
-        font-size: 12px;
+      hr {
+        margin: 20px 0;
+        border: none;
+        height: 0.5px;
+        background-color: themed("border");
       }
 
-      .user {
+      .menu {
         display: flex;
-        align-items: center;
-        gap: 10px;
-        img {
-          width: 30px;
-          height: 30px;
-          border-radius: 50%;
-          object-fit: cover;
-        }
-        span {
-          font-size: 14px;
-        }
-      }
+        flex-direction: column;
+        gap: 20px;
 
-      .item {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        img {
-          width: 30px;
-        }
         span {
-          font-size: 14px;
+          font-size: 12px;
+        }
+
+        .user {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+
+          img {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+
+          span {
+            font-size: 14px;
+          }
+        }
+
+        .item {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+
+          img {
+            width: 30px;
+          }
+
+          span {
+            font-size: 14px;
+          }
         }
       }
     }
