--- a/src/components/rightBar/rightBar.scss
+++ b/src/components/rightBar/rightBar.scss
@@ -1,86 +1,100 @@
+@import "../../style.scss";
+
+
 .rightBar {
-  flex: 3;
-  position: sticky;
-  //  враховуємо висоту набару яка 70
-  top: 70px;
-  //  задати висоту лівго мені і відняти висоту навбару
-  height: calc(100vh - 70px);
-  //  якщо елементи не вміщаються їх можна прокрутити
-  overflow: scroll;
+  @include themify($themes) {
 
-  &::-webkit-scrollbar {
-    display: none;
-  }
-  & {
-    scrollbar-width: none;
-  }
+    background-color: themed('bgSoft');
 
-  .container {
-    padding: 20px;
-    .item {
-      -webkit-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
-      -moz-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
-      box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
+    flex: 3;
+    position: sticky;
+    //  враховуємо висоту набару яка 70
+    top: 70px;
+    //  задати висоту лівго мені і відняти висоту навбару
+    height: calc(100vh - 70px);
+    //  якщо елементи не вміщаються їх можна прокрутити
+    overflow: scroll;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+    & {
+      scrollbar-width: none;
+    }
+
+    .container {
       padding: 20px;
-      margin-bottom: 20px;
-      // background-color: themed("bg");
-      span {
-        color: gray;
-      }
-      .user {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin: 20px 0;
 
-        .userInfo {
-          display: flex;
-          align-items: center;
-          gap: 20px;
-
-          position: relative;
-          img {
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            object-fit: cover;
-          }
-
-          .online {
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-            background-color: limegreen;
-
-            position: absolute;
-            top: 0;
-            left: 20px;
-          }
-
-          p {
-            color: gray;
-          }
-          span {
-            font-weight: 500;
-            color: black;
-          }
+      .item {
+        -webkit-box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.09);
+        -moz-box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.09);
+        box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.09);
+        padding: 20px;
+        margin-bottom: 20px;
+         background-color: themed("bg");
+        span {
+          color: gray;
         }
-        .buttons {
+
+        .user {
           display: flex;
           align-items: center;
-          gap: 10px;
+          justify-content: space-between;
+          margin: 20px 0;
 
-          button {
-            border: none;
-            padding: 5px;
-            color: white;
-            cursor: pointer;
+          .userInfo {
+            display: flex;
+            align-items: center;
+            gap: 20px;
 
-            &:first-child {
-              background-color: #5271ff;
+            position: relative;
+
+            img {
+              width: 30px;
+              height: 30px;
+              border-radius: 50%;
+              object-fit: cover;
             }
-            &:last-child {
-              background-color: #f0544f;
+
+            .online {
+              width: 12px;
+              height: 12px;
+              border-radius: 50%;
+              background-color: limegreen;
+
+              position: absolute;
+              top: 0;
+              left: 20px;
+            }
+
+            p {
+              color: themed('textColorsoft');
+            }
+
+            span {
+              font-weight: 500;
+              color:  themed('textColor');
+            }
+          }
+
+          .buttons {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+
+            button {
+              border: none;
+              padding: 5px;
+              color: white;
+              cursor: pointer;
+
+              &:first-child {
+                background-color: #5271ff;
+              }
+
+              &:last-child {
+                background-color: #f0544f;
+              }
             }
           }
         }
