--- a/src/components/comments/comments.scss
+++ b/src/components/comments/comments.scss
@@ -16,6 +16,10 @@
       gap: 20px;
       margin: 20px 0;
 
+      @include mobile{
+        gap: 5px;
+      }
+
       input {
         flex: 5;
         padding: 10px;
@@ -61,6 +65,11 @@
         align-self: center;
         color: grey;
         font-size: 12px;
+
+
+        @include mobile {
+          align-self: normal;
+        }
       }
     }
   }
