--- a/src/components/navbar/navBar.scss
+++ b/src/components/navbar/navBar.scss
@@ -40,6 +40,14 @@
         width: 500px;
         color: themed('textColor');
         background-color: transparent;
+
+        @include mobile {
+          display: none;
+        }
+
+        @include tablet {
+          width: 200px;
+        }
       }
     }
 
@@ -47,12 +55,19 @@
       display: flex;
       align-items: center;
       gap: 20px;
+      @include mobile {
+        display: none;
+      }
 
       .user {
         display: flex;
         align-items: center;
         gap: 10px;
         font-weight: 500;
+
+        @include tablet {
+          display: none;
+        }
 
         img {
           width: 30px;
