--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -12,6 +12,10 @@
     .container {
       padding: 20px;
 
+      @include mobile {
+        padding: 10px;
+      }
+
       .user {
         display: flex;
         align-items: center;
