--- a/src/components/stories/stories.scss
+++ b/src/components/stories/stories.scss
@@ -1,8 +1,19 @@
+@import "../../style";
+
 .stories {
   display: flex;
   gap: 10px;
   height: 250px;
   margin-bottom: 30px;
+
+  @include mobile {
+    height: 50px;
+    justify-content: space-between;
+  }
+  @include tablet {
+    height: 180px;
+    gap: 20px;
+  }
 
 
   .story {
@@ -10,6 +21,13 @@
     border-radius: 10px;
     overflow: hidden;
     position: relative;
+
+    @include mobile {
+      flex: none;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+    }
 
     img {
       width: 100%;
@@ -23,6 +41,10 @@
       left: 10px;
       font-weight: 500;
       color: white;
+
+      @include mobile {
+        display: none;
+      }
     }
 
     button {
@@ -40,6 +62,15 @@
       display: flex;
       align-items: center;
       justify-content: center;
+
+
+      @include mobile {
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+      }
     }
   }
 }
