--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -30,6 +30,14 @@
     .profileContainer {
       padding: 20px 70px;
 
+      @include mobile {
+        padding: 10px;
+      }
+
+      @include tablet {
+        padding: 20px;
+      }
+
       .uInfo {
         height: 180px;
         -webkit-box-shadow: 0 0 25px -10px rgba(0, 0, 0, 0.38);
@@ -44,11 +52,23 @@
         justify-content: space-between;
         margin-bottom: 20px;
 
+        @include mobile {
+          flex-direction: column;
+          height: 30vh;
+          padding: 20px;
+          margin-top: 100px;
+        }
+
         .left {
           flex: 1;
           display: flex;
           gap: 10px;
-          a{
+
+          @include tablet {
+            flex-wrap: wrap;
+          }
+
+          a {
             color: themed('textColorSoft');
           }
 
