--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,4 +1,7 @@
+@import "../../style.scss";
+
 .login {
+
   height: 100vh;
   background-color: rgb(193, 190, 255);
 
@@ -6,27 +9,45 @@
   justify-content: center;
   align-items: center;
 
+
+
   .card {
     display: flex;
     width: 50%;
     border-radius: 10px;
     overflow: hidden;
     background-color: white;
+    @include pc {
+      flex-direction: column;
+      width: 70%;
+    }
 
     .left {
       flex: 1;
       height: 600px;
-      background: linear-gradient(rgba(39, 11, 96, .5),rgba(39, 11, 96, .5)),
-    url("https://images.pexels.com/photos/3228727/pexels-photo-3228727.jpeg?auto=compress&cs=tinysrgb&w=1600") center;
+      background: linear-gradient(rgba(39, 11, 96, .5), rgba(39, 11, 96, .5)),
+      url("https://images.pexels.com/photos/3228727/pexels-photo-3228727.jpeg?auto=compress&cs=tinysrgb&w=1600") center;
       background-size: cover;
       padding: 50px;
       display: flex;
       flex-direction: column;
       gap: 30px;
       color: white;
+
+      @include pc {
+        padding: 20px;
+        height: 500px;
+        gap: 15px;
+      }
+    ;
+
       h1 {
         font-size: 100px;
         line-height: 100px;
+        @include pc {
+          font-size: 70px;
+          line-height: 70px;
+        }
       }
 
       p {
@@ -39,9 +60,9 @@
       button {
         width: 50%;
         padding: 10px;
-        border:none;
+        border: none;
         background-color: white;
-        color:rebeccapurple;
+        color: rebeccapurple;
         font-weight: bold;
         cursor: pointer;
       }
@@ -55,15 +76,22 @@
       justify-content: center;
       flex-direction: column;
       gap: 50px;
+      @include pc {
+        padding: 20px;
+        gap: 10px;
+      }
+
       h1 {
         color: #555;
       }
     ;
-      form{
+
+      form {
         display: flex;
         flex-direction: column;
         gap: 30px;
       }
+
       input {
         border: none;
         padding: 20px 10px;
@@ -84,3 +112,5 @@
     }
   }
 }
+
+
