--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,10 +1,13 @@
-.register  {
+@import "../../style.scss";
+
+.register {
   height: 100vh;
   background-color: rgb(193, 190, 255);
 
   display: flex;
   justify-content: center;
   align-items: center;
+
 
   .card {
     display: flex;
@@ -14,10 +17,14 @@
     overflow: hidden;
     background-color: white;
 
+    @include pc {
+      flex-direction: column;
+    }
+
     .left {
       flex: 1;
       height: 600px;
-      background: linear-gradient(rgba(39, 11, 96, .5),rgba(39, 11, 96, .5)),
+      background: linear-gradient(rgba(39, 11, 96, .5), rgba(39, 11, 96, .5)),
       url("https://images.pexels.com/photos/4881619/pexels-photo-4881619.jpeg?auto=compress&cs=tinysrgb&w=1600") center;
       background-size: cover;
       padding: 50px;
@@ -25,9 +32,21 @@
       flex-direction: column;
       gap: 30px;
       color: white;
+
+      @include pc {
+        padding: 20px;
+        height: 500px;
+        gap: 15px;
+      }
+
       h1 {
-        font-size: 100px;
-        line-height: 100px;
+        font-size: 90px;
+        line-height: 80px;
+        @include pc {
+          font-size: 50px;
+          line-height: 50px;
+        }
+
       }
 
       p {
@@ -40,9 +59,9 @@
       button {
         width: 50%;
         padding: 10px;
-        border:none;
+        border: none;
         background-color: white;
-        color:rebeccapurple;
+        color: rebeccapurple;
         font-weight: bold;
         cursor: pointer;
       }
@@ -56,15 +75,22 @@
       justify-content: center;
       flex-direction: column;
       gap: 50px;
+      @include pc {
+        padding: 20px;
+        gap: 10px;
+      }
+
       h1 {
         color: #555;
       }
     ;
-      form{
+
+      form {
         display: flex;
         flex-direction: column;
         gap: 30px;
       }
+
       input {
         border: none;
         padding: 20px 10px;
@@ -85,3 +111,5 @@
     }
   }
 }
+
+
