--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -20,6 +20,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        position: relative;
 
         .userInfo {
           display: flex;
@@ -45,6 +46,16 @@
             }
 
           }
+        }
+        button {
+          position: absolute;
+          top: 30px;
+          right: 0;
+          border: none;
+          background-color: #f0544f;
+          padding: 5px;
+          cursor: pointer;
+          color: white;
         }
       }
 
